--- a/app/src/main/res/layout/drinking_page.xml
+++ b/app/src/main/res/layout/drinking_page.xml
@@ -74,6 +74,7 @@
             android:text="Beer Me" />
 
         <Button
+            android:id="@+id/crap"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
