--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,4 +1,5 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="62dp">
 
@@ -7,11 +8,12 @@
             android:id="@+id/button10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView4"
+            android:layout_alignBottom="@+id/textView4"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="77dp"
-            android:layout_marginStart="77dp"
+            android:layout_marginLeft="99dp"
+            android:layout_marginStart="99dp"
             android:text="Beer Me" />
 
         <TextView
@@ -38,4 +40,5 @@
             android:layout_toRightOf="@+id/textView4"
             android:gravity="center_vertical|center_horizontal"
             android:text="BAC" />
+
     </RelativeLayout>
